# qRIMAC

./: .gitignore  CMakeLists.txt  README.md  ccInterpolationDlg.cpp  ccInterpolationDlg.h  ccWorkSite.cpp  ccWorkSite.h  ccclassification.cpp  ccclassification.h  ccinterpolation.cpp  ccinterpolation.h  interpolationDlg.ui  main.cpp  qRIMACPlugin.cpp  qRIMACPlugin.h  qRIMACPlugin.qrc  qRIMACdlg.pro  qRIMACdlg.pro.user.c1de71f  qrimacdlg.cpp  qrimacdlg.cpp.autosave  qrimacdlg.h  qrimacdlg.ui
